--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <img src="media/ada_alliance_logo.png" alt="Ada Alliance Logo" id="ada-alliance-logo">
-        <h1>Welcome to Ada Alliance</h1>
+        <img src="media/logo2-Photoroom.png" alt="team logo" id="team-logo" >
+        <h1>Team 4.5G</h1>
     </header>
     <main>
         <p>Welcome to our team project for SITE 1101. Explore our sections to learn more about us and our work!</p>
