--- a/code-artist.html
+++ b/code-artist.html
@@ -11,7 +11,8 @@
 
 <body>
     <header>
-        <img src="media/ada_logo_color.png" alt="ADA University's Logo in Color" width="150">
+        <a href="https://www.ada.edu.az/en">
+            <img src="media/ada_logo_color.png" alt="ADA Logo" width="150"></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
