--- a/hour-of-code.html
+++ b/hour-of-code.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <img src="media/ada_logo_color.png" alt="ADA University's Logo in Color" width="150">
+        <a href="https://www.ada.edu.az/en">
+            <img src="media/ada_logo_color.png" alt="ADA Logo" width="150"></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -36,14 +37,15 @@
                 </p>
                 <hr>
                 <div id="galery">
-                   <div class="image"><img src="media/Picture1.jpg"></div>
+                   <div class="image"><img src="media/Picture1.jpg" ></div>
+                   <div class="image"><img src="media/3.jpg"  ></div>
+                   <div class="image"><video controls loop> <source src="media/video.mp4" type="video/mp4"></video></div> 
+                   <div class="image"><video controls loop> <source src="media/team45.mp4" type="video/mp4"></video></div>
                    <div class="image"><img src="media/2.jpg"  ></div> 
-                   <div class="image"><img src="media/3.jpg"  ></div> 
-                   <div class="image"><img src="media/4.jpg"  ></div> 
+                   <div class="image"><img src="media/7.jpg"  ></div> 
+                   <div class="image"><img src="media/8.jpg"  ></div> 
                    <div class="image"><img src="media/5.jpg"  ></div> 
-                   <div class="image"><img src="media/6.jpg"  ></div>  
-                   <div class="image"> <video controls loop> <source src="media/video.mp4" type="video/mp4"></video></div>
-                   <div class="image"> <video controls loop> <source src="media/team45.mp4" type="video/mp4"></video></div>
+                   <div class="image"><img src="media/6.jpg"  ></div>                  
 
                 </div>
             </div>
