--- a/web-project.html
+++ b/web-project.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <img src="media/ada_logo_color.png" alt="ADA Logo" width="150">
+        <a href="https://www.ada.edu.az/en">
+        <img src="media/ada_logo_color.png" alt="ADA Logo" width="150"></a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
